use generated go files
